--- a/sessl/pom.xml
+++ b/sessl/pom.xml
@@ -26,8 +26,8 @@
 			<artifactId>junit</artifactId>
 		</dependency>
 		<dependency>
-			<groupId>com.weiglewilczek.slf4s</groupId>
-			<artifactId>slf4s_2.10</artifactId>
+			<groupId>com.typesafe</groupId>
+			<artifactId>scalalogging-slf4j_2.10</artifactId>
 		</dependency>
 		<dependency>
 			<groupId>org.slf4j</groupId>
