--- a/sessl-james/pom.xml
+++ b/sessl-james/pom.xml
@@ -12,7 +12,7 @@
 	</parent>
 	
 	<properties>
-		<james.version>0.9.3-SNAPSHOT</james.version>
+		<james.version>0.9.5-SNAPSHOT</james.version>
 	</properties>
 
 	<dependencies>
@@ -64,7 +64,7 @@
 		</dependency>
 		<!-- To support report generation: -->
 		<dependency>
-			<groupId>org.jamesii.private</groupId>
+			<groupId>org.jamesii</groupId>
 			<artifactId>resultreports</artifactId>
 			<version>${james.version}</version>
 		</dependency>
