--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 	<groupId>org.sessl</groupId>
 	<artifactId>parent-pom</artifactId>
 	<packaging>pom</packaging>
-	<version>0.9</version>
+	<version>0.10-SNAPSHOT</version>
 	<name>SESSL</name>
 	<url>http://sessl.org</url>
 
@@ -30,7 +30,7 @@
 	<scm>
 		<connection>scm:hg:${sessl.source.repository}</connection>
 		<url>${sessl.source.repository}</url>
-	  <tag>sessl-0.9</tag>
+	  <tag>HEAD</tag>
   </scm>
 
 	<issueManagement>
