--- a/sessl-sbmlsim/pom.xml
+++ b/sessl-sbmlsim/pom.xml
@@ -7,7 +7,7 @@
 	<parent>
 		<groupId>org.sessl</groupId>
 		<artifactId>parent-pom</artifactId>
-		<version>0.9</version>
+		<version>0.10-SNAPSHOT</version>
 		<relativePath>../.</relativePath>
 	</parent>
 
