Supporting JAMES II 0.9.5-SNAPSHOT (a reversal of changeset 2fefe16a2ba2810513ba98f6cd8d6fe1d953dca0).

--- a/sessl-james/pom.xml
+++ b/sessl-james/pom.xml
@@ -12,7 +12,7 @@
 	</parent>
 	
 	<properties>
-		<james.version>0.9.4</james.version>
+		<james.version>0.9.5-SNAPSHOT</james.version>
 	</properties>
 
 	<dependencies>
