finished the workflow for sbw, startet working on Jarnac integration

--- a/sessl-sbw/pom.xml
+++ b/sessl-sbw/pom.xml
@@ -24,7 +24,7 @@
 
 		<dependency>
 			<groupId>edu.caltech.sbw</groupId>
-			<artifactId>core-debug</artifactId> <!-- TODO: use 'core' for release, core-debug for testing -->
+			<artifactId>core</artifactId> <!-- TODO: use 'core' for release, core-debug for testing -->
 			<version>2.9.0</version>
 		</dependency>
 
