added treat for steady state estimation, does not work properly so far, due to complications with observation

--- a/sessl-sbw/pom.xml
+++ b/sessl-sbw/pom.xml
@@ -28,5 +28,10 @@
 			<version>2.9.0</version>
 		</dependency>
 
+        <dependency>
+			<groupId>org.jamesii.private</groupId>
+			<artifactId>steady-state</artifactId>
+			<version>0.9.5-SNAPSHOT</version>
+		</dependency>
 	</dependencies>
 </project>
